fixed issue with the back btn and made all imgs work on mobile for friends story pic

--- a/src/app/components/my-friends-story-pics/my-friends-story-pics.component.css
+++ b/src/app/components/my-friends-story-pics/my-friends-story-pics.component.css
@@ -1,16 +1,3 @@
-/*#imgContainer {
-	position: relative;
-}
-#viewImgBtn {
-	position: absolute;
-	right: 4%;
-	bottom: 2%;
-	display: none;
-}
-
-#imgContainer:hover #viewImgBtn { 
-	display: block; 
-}*/
 
 /*md-lg screen*/
 #imgContainer {
